<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="@dimen/contenedorPortrait"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contenedorRVChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imagenRVChild"
            android:layout_width="0dp"
            android:layout_height="@dimen/contenedorPortrait"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:contentDescription="@string/cdImagenPortada"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/texto1RVChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distancia1"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="@dimen/distancia1"
                android:singleLine="false"
                android:textColor="@color/Black"
                android:textSize="@dimen/letraPortrait1"
                />

                <TextView
                    android:id="@+id/texto2RVChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/distancia1"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/letraPortrait2"
                    />

            <TextView
                android:id="@+id/texto3RVChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="@dimen/distancia1"
                android:singleLine="false"
                android:textColor="@color/Black"
                android:textSize="@dimen/letraPortrait2"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewSeparadorHeight"
        android:background="@drawable/custom_selector_gradient_color"
        />
    <!--CONTENEDOR PAGINAS-->
    <LinearLayout
        android:id="@+id/contenedorPaginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:gravity="center_vertical"
        android:minHeight="@dimen/minHeightPaginas"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/contenedorPaginaAnterior"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/flechasPaginas"
                android:layout_height="@dimen/flechasPaginas"
                android:contentDescription="@string/cdPaginaAnterior"
                android:src="@drawable/flecha_izquierda" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/flechasPaginas"
                android:paddingStart="@dimen/paddingPaginas"
                android:paddingEnd="@dimen/paddingPaginas"
                android:text="@string/paginaAnterior"
                android:textColor="@color/White"
                android:textSize="@dimen/letraPaginas"
                android:textStyle="italic"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/numeroPaginaRecyclerViewChild"
            android:layout_width="@dimen/minHeightPaginas"
            android:layout_height="@dimen/minHeightPaginas"
            android:layout_gravity="center"
            android:background="@color/White"
            android:gravity="center"
            android:lines="1"
            android:padding="@dimen/paddingPaginas"
            android:textColor="@color/Black"
            android:textSize="@dimen/letraPaginas"
            app:autoSizeTextType="uniform" />
        <LinearLayout
            android:id="@+id/contenedorPaginaSiguiente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/flechasPaginas"
                android:paddingStart="@dimen/paddingPaginas"
                android:paddingEnd="@dimen/paddingPaginas"
                android:text="@string/paginaSiguiente"
                android:textColor="@color/White"
                android:textSize="@dimen/letraPaginas"
                android:textStyle="italic"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                />

            <ImageView
                android:layout_width="@dimen/flechasPaginas"
                android:layout_height="@dimen/flechasPaginas"
                android:contentDescription="@string/cdPaginaSiguiente"
                android:src="@drawable/flecha_derecha" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>